tests/qt6-qlatin1char-to-u/main.cpp.fixed.expected
#include <QtCore/QLatin1Char>
#include <QtCore/QChar>
#include <QtCore/QString>
#include <QtCore/QDir>

void receivingQChar(QChar s1) {}
void receivingQLatin1Char(QLatin1Char s1) {}

#define PREFIX '*'
void test()
{
    QChar c1 = u'*';
    QChar c11 = u'*'; // remove the check

    QString s = "aaa";
    bool b = s.startsWith(u'/');

    s += u'.';

    QString appPrefix = s + u'\\';
    appPrefix = s + u'\'';

    if (s.at(1) == u'*')
        b = true;

    QChar quotes[] = { u'"', u'"' };
    QChar c2 = true ? u'*' : u'/';

    int i = s.lastIndexOf(u'*');

    const QString sc = "sc";
    QString s2 = QDir::cleanPath(sc + u'*');

    s2.insert(1, u'*');


    receivingQChar(u'/');

    receivingQLatin1Char(u'/');
    //error: no matching function for call to 'receivingQLatin1Char'
    //receivingQLatin1Char(u'/'); // remove check

    QLatin1Char toto = u'/';
    //error: no viable conversion from 'char16_t' to 'QLatin1Char'
    //QLatin1Char totoo = u'/'; // remove check

    QChar char_with_macro = QLatin1Char(PREFIX); // should not be fixed
}
